SimGrid (3.6) unstable; urgency=low

 Simix
 * completely rewrote this module to allow parallel execution.

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.5) stable; urgency=medium

 Model Checking
 * New feature to any SimGrid-based simulator: Model-Checking
   Check SIN#1 for more details.

 SMPI
 * New Model SMPI (three-interval linear regression for correction factors)
   See RR-7426, available at http://hal.inria.fr/inria-00527150
 * Ability to use FORTRAN MPI code (through f2c, automatically privatized)
 * New MPI functions supported: MPI_Get_count(), MPI_Comm_split()
 * New: RAM folding (see RR-7426 and examples/smpi/NAS/DT-folding)
 * New: execution sampling (see RR-7426 and examples/smpi/NAS/EP-sampling)
 * See also src/smpi/README

 Tracing:
 Tracing:
 * Tracing system
   - Tracing API changes: TRACE_start and TRACE_end should not be called
     by user-code. They are automatically called by simulators created
     with SimDAG, MSG and SMPI if the toolkit is compiled with
     tracing_enabled=ON. Categories declaration and utilization remain the
     same for MSG and SimDag.
   - A function was added to the tracing API to declare categories with
     colors:
        - TRACE_category_with_color (char *category, char *color)
                where color must be in the following format
                    "%f %f %f", red, green, blue
                and red, green, blue are float values in the interval [0, 1]
        - User can specify NULL as color parameter, or continue calling
            TRACE_category (cat)
          On that case, the tracing system will define random colors
   - The following command-line options are supported:
        --cfg=tracing/filename:msg.trace
        --cfg=tracing:1               (activate tracing, needed to use others)
        --cfg=tracing/platform:1      (categorized resource use)
        --cfg=tracing/uncategorized:1 (uncategorized resource use)
        --cfg=tracing/msg/task:1      (task creation)